@@ -9,8 +9,9 @@
 
 // help - how to use this stuff
 void usage(void) {
-  printf("Usage: shallot [-dmopv] [-f <file>] [-t count] [-x time] [-e limit] pattern\n"
+  printf("Usage: shallot [-dimopv] [-f <file>] [-t count] [-x time] [-e limit] pattern\n"
          "  -d        : Daemonize (requires -f)\n"
+         " -i        : Infinite (Keep running after match)\n"
          "  -m        : Monitor mode (incompatible with -f)\n"
 	 "  -o        : Optimize RSA key size to improve SHA-1 hashing speed\n"
          "  -p        : Print 'pattern' help and exit\n"
